@@ -9,6 +9,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     application
+    id("com.gradleup.shadow") version "8.3.4"
 }
 
 repositories {
@@ -27,7 +28,12 @@ dependencies {
     
     // Logging
     implementation("org.slf4j:slf4j-api:2.0.11")
-    implementation("ch.qos.logback:logback-classic:1.4.14")
+    implementation("ch.qos.logback:logback-classic:1.5.13")
+
+    // Testing
+    testImplementation("org.junit.jupiter:junit-jupiter:5.12.1")
+    testImplementation("org.bouncycastle:bcprov-jdk18on:1.78")
+    testImplementation("org.bouncycastle:bcpkix-jdk18on:1.78")
 }
 
 testing {
@@ -43,8 +49,16 @@ testing {
 // Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion.set(JavaLanguageVersion.of(21))
     }
+}
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.addAll(listOf("--enable-preview"))
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs("--enable-preview")
 }
 
 // application {
